# dso

./: CMakeLists.txt
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  Residuals.cpp  Residuals.h  dirent.c
src/IOWrapper/: Output3DWrapper.h
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedTopHessian.cpp  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  MatrixAccumulators.h  RawResidualJacobian.h
src/util/: DatasetReader.h  DatasetReader_Image.h  DatasetReader_Video.h  IndexThreadReduce.h  Undistort.cpp  globalCalib.cpp
